--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -172,7 +172,7 @@
             </head>
             <body>
             <div class="signup-form">
-                <form action="/src/routes/loginroutes.js" method="post">
+                <form action="/signup/Submit" method="GET">
                     <h2>Sign Up</h2>
                     <p>Please fill in this form to create an account!</p>
                     <hr>
@@ -195,7 +195,7 @@
                         <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                     </div>
                 </form>
                 <div class="hint-text">Already have an account? <a href="#">Login here</a></div>
