--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -116,8 +116,8 @@
           </head>
           <body>
           <div class="login-form">
-              <form action="./login.ejs" method="post">
-                  <h2 class="text-center">Log in</h2>       
+              <form action="/login/submit" method="GET">
+                  <h2 class="text-center">Submit</h2>       
                   <div class="form-group">
                       <input type="text" class="form-control" placeholder="Username"  pattern="^([A-Za-z0-9\.-]+)@([A-Za-z0-9\-]+).([a-z]{2,3})(.[a-z]{2,3}?)$" title="Must be in proper email format" required="required">
                   </div>
@@ -125,7 +125,7 @@
                       <input type="password" class="form-control" placeholder="Password"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required="required">
                   </div>
                   <div class="form-group">
-                      <button type="submit" class="btn btn-primary btn-block">Log in</button>
+                      <button type="submit" class="btn btn-primary btn-block">Login</button>
                   </div>
                   <div class="clearfix">
                       <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
