--- a/src/views/addauthor.ejs
+++ b/src/views/addauthor.ejs
@@ -93,7 +93,7 @@
           
           <!--/stories-->
           <div class="row">    
-            <form method="GET" action="/addauthor/Add">
+            <form method="POST" action="/addauthor/Add">
                 Author: <input type="text" name="author" required ><br><br>
                 Books: <input type="text" name="books" required><br><br>
                 Genre: <input type="text" name="genre" required><br><br>
