--- a/src/views/addbook.ejs
+++ b/src/views/addbook.ejs
@@ -12,10 +12,9 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="/css/styles.css" rel="stylesheet">
-</head>
-
-<body>
-    <header class="navbar navbar-bright navbar-fixed-top" role="banner">
+	</head>
+	<body>
+<header class="navbar navbar-bright navbar-fixed-top" role="banner">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
@@ -49,141 +48,119 @@
     </nav>
   </div>
 </header>
-        <!-- <div class="sign_text">
-            <i class="fa fa-user"></i><a href="sign-in.html"> Sign In</a> or <a href="sign-up.html">Create Account</a>
-        </div> -->
-    </nav>
-    <div class="jumbotron top">
-        <div class="col-md-7">
-            <h1>Books</h1>
-        </div>
-        <div class="col-md-5 blank_space">
 
+<div id="masthead">  
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1>Books
+          <p class="lead"></p>
+        </h1>
+      </div>
+      <div class="col-md-5">
+        <div class="well well-lg"> 
+          <div class="row">
+            <div class="col-sm-12">
+              
+			
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
+    </div> 
+  </div><!-- /cont -->
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="top-spacer"> </div>
+      </div>
+    </div> 
+  </div><!-- /cont -->
+  
+</div>
 
-    <div class="container main">
+
+<div class="container">
+  <div class="row">
+    
+    <div class="col-md-12"> 
+      
+      <div class="panel">
+        <div class="panel-body">
+          
+          
+          
+          <!--/stories-->
+          <div class="row">    
+            <form method="POST" action="/addbook/Add">
+                Bookname: <input type="text" name="author" required ><br><br>
+                Authorname: <input type="text" name="books" required><br><br>
+                Genre: <input type="text" name="genre" required><br><br>
+                Image: <input type="file" name="image" required><br><br>
+                <button type="submit" >Add</button><br>
+            </form>
+          </div>
+          <hr>
+          
+          
+          <!--/stories-->
+          
+          
+          <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
         
-        <hr>
-        <div class="sign_up">
-            <div class="col-md-8">
-                <form class="form-horizontal" id="myForm" onsubmit="return book_validate()">
-                    <div class="form-group">
-                        <label class="col-md-3">Book Name <small class="mand">*</small></label>
-                        <div class="col-md-10">
-                            <small class="mand" id="book_error_name"></small>
-                            <input type="text" class="form-control" id="book_name" onblur="book_validate_name(this.value)" placeholder="Enter Book Name">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-3">Author Name <small class="mand">*</small></label>
-                        <div class="col-md-10">
-                            <small class="mand" id="book_error_author_name"></small>
-                            <input type="text" class="form-control" id="book_author_name" onblur="book_validate_autor_name(this.value)" placeholder="Enter Author Name">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-3">Genre <small class="mand">*</small></label>
-                        <div class="col-md-10">
-                            <small class="mand" id="book_error_genre"></small>
-                            <select type="text" class="form-control" id="book_genre" onblur="book_validate_genre(this.value)" placeholder="Select Genre">
-                            <option value="">--Select--</option> 
-                            <option value="Adventure">Adventure</option> 
-                            <option value="Art">Art</option>
-                            <option value="Children’s">Children’s</option>
-                            <option value="Contemporary">Contemporary</option>
-                            <option value="Cooking">Cooking</option>
-                            <option value="Development">Development</option>
-                            <option value="Dystopian">Dystopian</option>
-                            <option value="Families & Relationships">Families & Relationships</option>
-                            <option value="Fantasy">Fantasy</option>
-                            <option value="Guide">Guide</option>
-                            <option value="Health">Health</option>
-                            <option value="Historical fiction">Historical fiction</option>
-                            <option value="History">History</option>
-                            <option value="Horror">Horror</option>
-                            <option value="Humor">Humor</option>
-                            <option value="Memoir">Memoir</option> 
-                            <option value="Motivational">Motivational</option> 
-                            <option value="Mystery">Mystery</option> 
-                            <option value="Paranormal">Paranormal</option>  
-                            <option value="Romance">Romance</option> 
-                            <option value="Science Fiction">Science Fiction</option> 
-                            <option value="Personal">Personal</option> 
-                            <option value="Thriller">Thriller</option> 
-                            <option value="Travel">Travel</option> 
-                                                       </select>
-                        </div>
-                    </div>
-
-
-                    <div class="form-group">
-                        <label class="col-md-3">Description <small class="mand">*</small></label>
-                        <div class="col-md-10">
-                            <small class="mand" id="book_error_description"></small>
-                            <textarea class="form-control address_field" id="book_description" placeholder="Description" onblur="book_validate_description(this.value)"></textarea>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-md-3">Book Cover Image <small class="mand">*</small></label>
-                        <div class="col-md-10">
-                            <small class="mand" id="book_error_image"></small>
-                            <input type="file" class="form-control " id="book_image" onblur="book_validate_image(this.value)">
-                        </div>
-                    </div>
-
-
-
-
-
-
-
-
-
-                    <div class="form-group">
-                        <div class="col-md-3">
-                            <button type="submit" class="btn btn-primary submit_button">Save</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+          
         </div>
+      </div>
+                                                                                       
+	                                                
+                                                      
+   	</div><!--/col-12-->
+  </div>
+</div>
+                                                
+                                                                                
+<hr>
 
-
+<div class="container" id="footer">
+  <div class="row">
+    <div class="col col-sm-12">
+      
+      <h1>Follow Us</h1>
+      <div class="btn-group">
+       <a class="btn btn-twitter btn-lg" href="#"><i class="icon-twitter icon-large"></i> Twitter</a>
+	   <a class="btn btn-facebook btn-lg" href="#"><i class="icon-facebook icon-large"></i> Facebook</a>
+	   <a class="btn btn-google-plus btn-lg" href="#"><i class="icon-google-plus icon-large"></i> Google+</a>
+      </div>
+      
     </div>
+  </div>
+</div>
 
-    <!-- Success Modal -->
-    <div id="modal_add_book" class="modal">
-        <div class="modal-content">
-            <div>
-                <span class="close">&times;</span>
-            </div>
-            <div class="success_img">
-                <img src="/images/tik.gif">
-            </div>
-            <div class="success_h1">
-                <h1>Book Details Added Successfully</h1>
-            </div>
-            <br>
-            <a class="success_btn" href="/books"><button class="btn btn-primary">View Books List</button></a>
-        </div>
+<hr>
 
+<hr>
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <ul class="list-inline">
+          <li><i class="icon-facebook icon-2x"></i></li>
+          <li><i class="icon-twitter icon-2x"></i></li>
+          <li><i class="icon-google-plus icon-2x"></i></li>
+          <li><i class="icon-pinterest icon-2x"></i></li>
+        </ul>
+        
+      </div>
+      <div class="col-sm-6">
+          <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>      
+      </div>
     </div>
-
-    <footer>
-        <div class="container">
-            <h1>Follow Us</h1>
-            <div class="social_icon">
-                <button class="btn btn-info">Twitter</button>
-                <button class="btn btn-primary">Facebook</button>
-                <button class="btn btn-danger">Google+</button>
-            </div>
-        </div>
-
-
-    </footer>
-    <script src="js/form.js"></script>
-</body>
-
+  </div>
+</footer>
+	<!-- script references -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+	</body>
 </html>
