--- a/src/views/author.ejs
+++ b/src/views/author.ejs
@@ -95,10 +95,10 @@
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="/images/<%=Author.img%>" style="width:100px;height:100px" class="img-circle"></a>
+              <a class="story-title" href="#"><img alt="" src="/images/<%=Author.image%>" style="width:100px;height:100px" class="img-circle"></a>
             </div>
             <div class="col-md-10 col-sm-9">
-              <h3><%=Author.Author%></h3>
+              <h3><%=Author.author%></h3>
               <div class="row">
                 <div class="col-xs-9">
                     <a href="/Authors/<%=i%>" class="text-muted"><%=Author.Profile%></a></small>
