--- a/src/views/authors.ejs
+++ b/src/views/authors.ejs
@@ -96,13 +96,13 @@
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="/images/<%=Authors[i].img%>" style="width:100px;height:100px" class="img-circle"></a>
+              <a class="story-title" href="#"><img alt="" src="/images/<%=Authors[i].image%>" style="width:100px;height:100px" class="img-circle"></a>
             </div>
             <div class="col-md-10 col-sm-9">
-              <h3><%=Authors[i].Author%></h3>
+              <h3><%=Authors[i].author%></h3>
               <div class="row">
                 <div class="col-xs-9">
-                    <a href="/Authors/<%=i%>" class="text-muted">Read More</a></small>
+                    <a href="/Authors/<%=Authors[i]._id%>" class="text-muted">Read More</a></small>
                   </h4></div>
                 <div class="col-xs-3"></div>
               </div>
